argocd/workloads/wallos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallos
  namespace: wallos
  labels:
    app: wallos
spec:
  selector:
    matchLabels:
      app: wallos
  replicas: 1
  template:
    metadata:
      labels:
        app: wallos
    spec:
      containers:
        - name: wallos
          image: bellamy/wallos:2.51.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8282
              protocol: TCP
          volumeMounts:
            - mountPath: ./db
              name: wallos-db
            - mountPath: ./logos
              name: wallos-logos
          resources: {}
      restartPolicy: Always
      volumes:
        - name: wallos-db
          persistentVolumeClaim:
            claimName: wallos-db
        - name: wallos-logos
          persistentVolumeClaim:
            claimName: wallos-logos
