argocd/workloads/wallos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallos
  namespace: wallos
spec:
  ingressClassName: nginx
  rules:
  - host: wallos.legion.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wallos
            port:
              number: 80
